# Active_Spectral_Learning

./: README.md  pyproject.toml  requirements.txt
legacy/: upload_final_actlearn.ipynb
src/actlearn_gsm/: __init__.py  active_learning.py  cli.py  config.py  data.py  ensemble.py  experiment.py  kernels.py  models.py  plotting.py  uncertainty.py
tests/: test_smoke.py
