[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "parameter-info-active-learning"
version = "0.1.0"
description = "Parameter-information active learning with non-stationary GSM Gaussian processes."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "numpy",
    "matplotlib",
    "torch",
    "gpytorch",
]

[project.optional-dependencies]
dev = ["pytest"]

[project.scripts]
actlearn-gsm = "actlearn_gsm.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
